<resources>
    <string name="app_name">SysMart</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Sysmart</string>
    <string name="title_activity_login">Login</string>
    <string name="text_welcome_login">Welcom Login</string>
    <string name="text_hint_email">Email</string>
    <string name="text_hint_password">Password</string>
    <string name="text_btn_login">Login Now</string>
    <string name="text_btn_register">Register Now</string>
    <string name="title_activity_register">Register</string>
    <string name="text_register_us">Register With Us</string>
    <string name="text_hint_fname">Full Name</string>
    <string name="text_hint_phone">Phone</string>
    <string name="text_hint_address">Address</string>
    <string name="text_hint_state">State</string>
    <string name="text_hint_country">Country</string>
    <string name="text_hint_city">City</string>
    <string name="text_hint_zipcode">Zipcode</string>
    <string name="text_hint_username">Username</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_profile_update">Profile Update</string>
    <string name="txt_order_details">Your Order Detail</string>
    <string name="txt_shop_by_category">Shop By Category</string>
    <string name="btn_place_order">Place Order</string>
    <string name="btn_checkout">Checkout</string>
    <string name="btn_buynow">Buy Now</string>
    <string name="txt_product">Product</string>
    <string name="txt_price">Price</string>
    <string name="txt_qty">Qty</string>
    <string name="txt_amount">Amount</string>
    <string name="txt_cas_delivery">Cash on delivery</string>
    <string name="txt_paypal">Paypal</string>
    <string name="txt_total_amount">Total Amount</string>
    <string name="txt_total_item">Total Items</string>
    <string name="txt_total_qty">Total Qty</string>
    <string name="text_btn_request_password">Request Password</string>
    <string name="btn_forgot_password_need">Need Password ?</string>
    <string name="title_activity_choose_service">Choose Service</string>
    <string name="title_activity_choose_time">Choose Time</string>
    <string name="title_activity_chooe_address">Choose Address</string>
    <string name="title_activity_choose_photo">Description</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_choose_city">ChooseCity</string>
    <string name="title_activity_products">Products</string>
    <string name="title_activity_viewcart">View Cart</string>
    <string name="title_activity_product_detail">Product Detail</string>
    <string name="title_activity_productdetail">Product Detail</string>
    <string name="title_activity_checkout">Pick an address</string>
    <string name="title_activity_placeorder">Place Order</string>
    <string name="title_activity_order_detail">Order Detail</string>
    <string name="title_activity_order_complete">Thanks Order Complete</string>
    <string name="satisfaction_send">SEND</string>
    <string name="satisfaction_user">User Name*</string>
    <string name="satisfaction_Email">Email*</string>
    <string name="satisfaction_comment">Comment*</string>
    <string name="contactus_Phonenumber">Phone Number</string>
    <string name="contactus_Email">Email</string>
    <string name="Contactus_Website">Website</string>
    <string name="loading">Loading. Please Wait..</string>
    <string name="viewcartadapter_product_removed">Product Removed</string>
    <string name="internetconnection">Please connect mobile with working Internet</string>
    <string name="forgotactivity_mobile_no">Enter Mobile No</string>
    <string name="forgotactivity_enter_password">Enter Password</string>
    <string name="mainactivity_logout_sucessfull">Logout Sucessfull</string>
    <string name="mainactivity_mainactivity_are_exit">Are you sure you want to exit?</string>
    <string name="mainactivity_this_device">This device is not supported.</string>
    <string name="orderdetailactivity_order_cancle">Order Cancle Succesfull</string>
    <string name="placeorderactivity_max_purchase_order">Max Purchase Order</string>
    <string name="placeorderactivity_delivery_charge">Delivery Charge :</string>
    <string name="placeorderactivity_total_price"> Total Price : </string>
    <string name="placeorderactivity_total_item">Total Items :</string>
    <string name="placeorderactivity_error_parsing_data">Error parsing data</string>
    <string name="placeorderactivity_order_placed_succesfull">Order Placed Succesfull</string>
    <string name="placeorderactivity_product_added_to_cart">Product Added to Cart</string>
    <string name="productsActivity">selected_product</string>
    <string name="signupactivity_mobile_no">Enter Mobile No</string>
    <string name="signupactivity_enter_password">Enter Password</string>
    <string name="signupactivity_your_registration">Your registration is successful.</string>
    <string name="viewcartactivity_min_purchase_order">Min Purchase Order</string>
    <string name="viewcartactivity_please_order_minimum_of_amount">Please order Minimum of amount </string>
    <string name="viewcartactivity_max_purchase_order">Max Purchase Order</string>
    <string name="viewcartactivity_delivery_charge">Delivery Charge</string>
    <string name="viewcartactivity_total_price"> Total Price : </string>
    <string name="viewcartactivity_product_qty">Product Qty</string>
    <string name="viewcartactivity_qty">Qty</string>
    <string name="viewcartactivity_save">Save</string>
    <string name="viewcartactivity_cancel">Cancel</string>
    <string name="viewcartactivity_all_product_removed">All Product Removed...</string>
    <string name="myprofilefragment_your_profile_update_Succesfull">Your Profile Update Succesfull</string>
</resources>
