<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp" >

            <EditText
                android:id="@+id/editFname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_register_fullname"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/text_hint_fname"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_login_04"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/text_hint_username"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_register_email"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/text_hint_email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:maxLines="1" />

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_register_phone"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/text_hint_phone"
                android:inputType="phone"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" 
                android:focusable="false"
                />

            <EditText
                android:id="@+id/editAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableLeft="@drawable/ic_register_address"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/text_hint_address"
                android:inputType="textPostalAddress"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />
            <EditText
                android:id="@+id/editZipcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_register_address"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/text_hint_zipcode"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />
            <EditText
                android:id="@+id/editCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_register_address"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/text_hint_city"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/btnupadate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/xml_yellow_button"
                android:text="@string/btn_profile_update"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>
        
    </ScrollView>

       

</RelativeLayout>
