<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sysmart.PlaceorderActivity" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:padding="5dp"
                android:text="@string/txt_cas_delivery" />

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_paypal"
                android:padding="5dp"/>
        </RadioGroup>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginLeft="94dp" >



    </RelativeLayout>

    <Button
        android:id="@+id/btnsave"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout2"
        android:layout_marginTop="16dp"
        android:background="@drawable/xml_yellow_button"
        android:text="@string/btn_place_order"
        
        android:textColor="@color/white" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btnsave"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/placeorderactivity_total_item" />
            <TextView
                android:id="@+id/textitem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:textColor="#040404"
                android:text="" />



        </LinearLayout>
        <TextView
            android:id="@+id/textTotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeorderactivity_total_price"
            android:padding="5dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeorderactivity_delivery_charge"
                android:padding="5dp" />
            <TextView
                android:id="@+id/delivery_charge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.0"
                android:padding="5dp"/>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>