<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vegitable.LoginActivity" >

  <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/login" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/syscryption"
                    android:layout_marginTop="20dp" />

    </RelativeLayout>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_horizontal_margin"
    android:layout_centerHorizontal="true"
    android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
             >

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/text_hint_phone"
                android:inputType="phone"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                android:drawablePadding="5dp"
                 android:drawableLeft="@drawable/ic_register_phone" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/text_hint_password"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:padding="15dp"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/ic_login_07" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_btn_login"
            android:textColor="@color/white"
            android:background="@drawable/xml_yellow_button" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Or"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_btn_register"
            android:textColor="@color/white"
            android:background="@drawable/xml_red_button" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_forgot_password_need"
        android:id="@+id/btnneed"
        android:background="@android:color/transparent" />

    </LinearLayout>



        </LinearLayout>
    </ScrollView>
     

</RelativeLayout>
