<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vegitable.SignUpActivity" >

     <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >
<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/register" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/syscryption"
        android:layout_marginTop="110dp" />

    </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            
            android:padding="15dp"
            android:layout_marginTop="10dp" >

             <EditText
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/text_hint_phone"
                android:inputType="phone"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                android:drawablePadding="5dp"
                 android:drawableLeft="@drawable/ic_register_phone" />
            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/text_hint_password"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:drawablePadding="5dp"
                 android:drawableLeft="@drawable/ic_login_07" />

           

            <Button
                android:id="@+id/button1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_btn_register"
                android:background="@drawable/xml_yellow_button"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

        </LinearLayout>

    </LinearLayout>
        
    </ScrollView>

</RelativeLayout>
